# Amphion

./: pyproject.toml
src/amphion/bins/codec/: inference.py  train.py
src/amphion/bins/svc/: train.py
src/amphion/bins/tts/: inference.py  train.py
src/amphion/bins/vc/: train.py
src/amphion/bins/vc/Noro/: train.py
src/amphion/bins/vocoder/: train.py
src/amphion/evaluation/metrics/f0/: f0_corr.py  f0_rmse.py  v_uv_f1.py
src/amphion/models/base/: base_trainer.py
src/amphion/models/codec/: codec_dataset.py  codec_inference.py  codec_trainer.py
src/amphion/models/codec/amphion_codec/: codec.py
src/amphion/models/codec/coco/: coco_dataset.py  rep_coco_model.py  rep_coco_trainer.py
src/amphion/models/codec/discriminator/: hifigan_disriminator.py
src/amphion/models/codec/facodec/: facodec_dataset.py  facodec_trainer.py
src/amphion/models/codec/kmeans/: repcodec_model.py
src/amphion/models/codec/vevo/: vqvae_trainer.py
src/amphion/models/svc/autoregressive_transformer/: ar_model.py  ar_trainer.py
src/amphion/models/svc/flow_matching_transformer/: fmt_model.py  fmt_trainer.py
src/amphion/models/svc/vevo2/: infer_vevo2_ar.py  infer_vevo2_fm.py  vevo2_utils.py
src/amphion/modules/norms/: norm.py
src/amphion/preprocessors/: vctksample.py
src/amphion/preprocessors/Emilia/: main.py  main_multi.py
src/amphion/processors/: acoustic_extractor.py  audio_features_extractor.py  content_extractor.py  phone_extractor.py
src/amphion/text/: __init__.py  symbols.py  text_token_collation.py
src/amphion/utils/: path.py  util.py
(+82 files in other folders)
